fixed word break in forum post and overview

--- a/OurUmbraco.Client/src/scss/elements/_forum-thread.scss
+++ b/OurUmbraco.Client/src/scss/elements/_forum-thread.scss
@@ -259,7 +259,8 @@
 
 			.topic {
 				flex: 0 0 100%;
-
+				word-break: break-all;
+				
 				@media (min-width: $md) {
 					flex: 0 0 72%;
 					margin-right: 3%;
